Create .no-marker class for list items

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body {
     color: rgb(62, 199, 62);
 }
 
+.no-marker {
+    list-style-type: none;
+}
+
 .MapPlay,
 .MapShowcase {
     display: flex;
